fixing alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,7 +13,6 @@ body {
 }
 
 #party{
-   margin: 20px;
    padding: 20px;
    border: dashed 3px #FFEB3B;
    background-color: #FFF9C4;
